# litellm-llm-router

./: .dockerignore  .env.example  .gitignore  .rr.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.ha-test.yml  docker-compose.ha.yml  docker-compose.local-test.yml  docker-compose.otel.yml  docker-compose.quota-test.yml  docker-compose.yml  lefthook.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  docker-build.yml  ha-gate.yml  load-gate.yml
.kiro/steering/: a2a-mcp-protocols.md  api-endpoints.md  coding-standards.md  config-sync.md  docker-deployment.md  llmrouter-strategies.md  opentelemetry-integration.md  project-overview.md  testing-guidelines.md
config/: config.bedrock.yaml  config.local-test.yaml  config.quota-test.yaml  config.yaml  llm_candidates.json  nginx.conf  otel-collector-config.yaml  policy.example.yaml
custom_routers/: .gitkeep
docker/: Dockerfile  Dockerfile.local  entrypoint.local.sh
docs/: TECHNICAL_ROADMAP.md  VALIDATION_PLAN.md  a2a-gateway.md  api-parity-analysis.md  api-reference.md  configuration.md  deployment.md  docs-consolidation-plan.md  ha-ci-gate.md  high-availability.md  hot-reloading.md  implementation-backlog.md  index.md  litellm-cloud-native-enhancements.md  mcp-gateway.md  mlops-training.md  moat-mode.md  observability-training.md  observability.md  parity-roadmap.md  plugins.md  project-state.md  quickstart-docker-compose.md  quickstart-ha-compose.md  quickstart-otel-compose.md  release-checklist.md  routing-strategies.md  rr-workflow.md  security.md  skills-gateway.md  vector-stores.md
docs/architecture/: aws-deployment.md  cloud-native.md  ml-routing-cloud-native.md  mlops-loop.md  overview.md
docs/deployment/: air-gapped.md  aws.md
docs/tutorials/: ha-quickstart.md  observability-quickstart.md
examples/mlops/: Dockerfile.trainer  MLproject  README.md  docker-compose.mlops.yml  python_env.yaml
models/: .gitkeep
plans/: api-parity.md  backlog.md  cloud-native-architectural-roadmap.md  p1-remove-import-side-effects-plan.md  parity-roadmap.md  release-checklist.md  resume-checkpoint.md  technical-roadmap.md  tg10-6-e2e-verification-report.md  tg4-observability-epic.md  tg5-security-policy-epic.md  tg6-ci-quality-gates-epic.md  tg7-cloud-native-deploy-epic.md  tg8-routing-mlops-epic.md  tg9-extensibility-epic.md  validation-plan.md
reports/architecture-review/: 00-unified-summary.md  01-industry-landscape.md  02-mcp-protocol-compliance.md  03-content-security-guardrails.md  04-cost-routing-finops.md  05-semantic-caching.md  06-streaming-observability.md  07-a2a-multi-agent.md  08-plugin-ecosystem.md  09-emerging-standards.md
reports/v0.0.2-review/: 00-unified-summary.md  01-architecture-deep-review.md  02-security-audit.md  03-docker-optimization.md  04-github-issues-research.md  05-performance-review.md  06-test-coverage-analysis.md  07-plugin-architecture.md  08-dependency-audit.md  09-protocol-compliance.md  10-observability-dx.md
scripts/: comprehensive_test.py  detect_secrets.py  detect_secrets.sh  e2e_test.py  install_lefthook.sh  run_ha_gate.py  test_gateway.py  test_local.sh  test_mlops_pipeline.sh  test_security_multi_tenancy.py  train_from_traces.py  validate_mcp_gateway.py  validate_parity.py
src/litellm_llmrouter/: __init__.py  a2a_gateway.py  a2a_tracing.py  audit.py  auth.py  config_sync.py  conversation_affinity.py  database.py  hot_reload.py  http_client_pool.py  leader_election.py  mcp_gateway.py  mcp_jsonrpc.py  mcp_sse_transport.py  mcp_tracing.py  metrics.py  model_artifacts.py  observability.py  policy_engine.py  quota.py  rbac.py  resilience.py  router_decision_callback.py  routes.py  routing_strategy_patch.py  semantic_cache.py  startup.py  strategies.py  strategy_registry.py  telemetry_contracts.py  url_security.py
tests/: conftest.py  test_http_routes.py  test_security_abuse.py  test_ssrf_hardening.py  test_strategies.py  test_telemetry_contracts.py
tests/integration/: __init__.py  _otel_compose_helpers.py  test_audit_logging.py  test_e2e_api_validation.py  test_ha_leader_failover.py  test_local_stack.py  test_mcp_local_stack.py  test_otel_e2e.py  test_policy_enforcement.py  test_quota_enforcement.py  test_rbac_enforcement.py  test_resilience.py  test_streaming_perf_gate.py
tests/perf/: streaming_perf_harness.py
tests/property/: __init__.py  test_a2a_gateway_properties.py  test_core_integration_properties.py  test_ha_infrastructure_properties.py  test_mcp_gateway_properties.py  test_mlops_training_properties.py  test_observability_properties.py  test_routing_strategy_properties.py
tests/unit/: conftest.py  test_a2a_compliance.py  test_a2a_streaming_passthrough.py  test_a2a_tracing.py  test_audit.py  test_auth.py  test_circuit_breakers.py  test_config_loader.py  test_content_filter.py  test_conversation_affinity.py  test_cost_aware_routing.py  test_cost_tracker.py  test_database.py  test_evaluator_plugin.py  test_gateway_app.py  test_guardrails.py  test_ha_config_sync.py  test_hot_reload.py  test_http_client_pool.py  (+25 more)
(+28 files in other folders)
